Prevent hero text from growing too wide
At 18em the frontpage hero unit wraps pretty nicely.

--- a/source/stylesheets/modules/_hero.css.sass
+++ b/source/stylesheets/modules/_hero.css.sass
@@ -6,4 +6,5 @@
 
   h1
     font-weight: normal
+    max-width: 18em
     text-align: center
